added optimization with fixed-value parameter, required first step for computing profile likelihood #30

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@
 libcmaesdir =$(libdir)
 
 libcmaes_LTLIBRARIES=libcmaes.la
-libcmaes_la_SOURCES=config.h cmastrategy.h cmastrategy.cc covarianceupdate.h esoptimizer.h esostrategy.h esostrategy.cc cmasolutions.h cmasolutions.cc parameters.h cmaparameters.h cmaparameters.cc cmastopcriteria.h cmastopcriteria.cc ipopcmastrategy.h ipopcmastrategy.cc bipopcmastrategy.h bipopcmastrategy.cc covarianceupdate.h covarianceupdate.cc acovarianceupdate.h acovarianceupdate.cc pwq_bound_strategy.h pwq_bound_strategy.cc
+libcmaes_la_SOURCES=config.h cmastrategy.h cmastrategy.cc covarianceupdate.h esoptimizer.h esostrategy.h esostrategy.cc cmasolutions.h cmasolutions.cc parameters.h cmaparameters.h cmaparameters.cc cmastopcriteria.h cmastopcriteria.cc ipopcmastrategy.h ipopcmastrategy.cc bipopcmastrategy.h bipopcmastrategy.cc covarianceupdate.h covarianceupdate.cc acovarianceupdate.h acovarianceupdate.cc pwq_bound_strategy.h pwq_bound_strategy.cc errstats.h errstats.cc
 
 AM_CPPFLAGS=-I$(EIGEN3_INC)
 AM_CXXFLAGS=-Wall -g -fopenmp
