configure now detects clang and avoid using fopenmp on OSX and when clang is the compiler, as openmp is not supported by it + fixed dependencies on gflags for surrogates sample code

--- a/Makefile.am
+++ b/Makefile.am
@@ -14,7 +14,10 @@ libcmaesinclude_HEADERS += surrogatestrategy.h
 endif
 
 AM_CPPFLAGS=-I$(EIGEN3_INC)
-AM_CXXFLAGS=-Wall -Wextra -g -fopenmp
+AM_CXXFLAGS=-Wall -Wextra -g
+if !HAVE_CLANG
+AM_CXXFLAGS += -fopenmp
+endif
 
 uninstall-hook:
 	if test -d ${libcmaesincludedir}; then rm -rf ${libcmaesincludedir}; fi
